--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1721,6 +1721,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.media-folder_actions .media-folder_action__list {
 			opacity: 1;
 			visibility: visible;
+			z-index: 112;
 		}
 	}
 
