--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12532,6 +12532,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 #media-folder-document-data-table .media-folder_items.is-visible .media-folder_actions .media-folder_action__list {
   opacity: 1;
   visibility: visible;
+  z-index: 112;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_icon {
