--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -95,6 +95,7 @@
 	padding: 1rem 1.5rem;
 }
 
+.bbp-reply-form #whats-new-toolbar,
 .bbp-topic-form #whats-new-toolbar {
 
 	.medium-editor-toolbar {
@@ -154,7 +155,7 @@
 		}
 
 		.medium-editor-toolbar-form .medium-editor-toolbar-input {
-			width: 220px;
+			width: 210px;
 			margin-bottom: 0;
 			background-color: #fff;
 			border: 1px solid #dedfe2;
@@ -221,7 +222,7 @@
 			}
 
 			.medium-editor-toolbar-form .medium-editor-toolbar-input {
-				width: 220px;
+				width: 210px;
 				margin-bottom: 0;
 				background-color: #fff;
 				border: 1px solid #dedfe2;
@@ -236,6 +237,31 @@
 
 	}
 
+}
+
+.buddypress #buddypress.buddypress-wrap .activity-update-form.media-off #whats-new-content,
+.buddypress #buddypress.buddypress-wrap .bbp-reply-form #whats-new-toolbar.media-off,
+.buddypress #buddypress.buddypress-wrap .bbp-topic-form #whats-new-toolbar.media-off {
+
+	.medium-editor-toolbar {
+		visibility: visible;
+		height: 44px;
+		left: 0;
+		opacity: 1;
+
+		.medium-editor-toolbar-actions {
+			opacity: 0.4;
+		}
+
+		&.medium-editor-toolbar-active .medium-editor-toolbar-actions {
+			opacity: 1;
+		}
+
+	}
+}
+
+.buddypress #buddypress.buddypress-wrap .activity-update-form.media-off #whats-new-content .medium-editor-toolbar {
+	bottom: -25px;
 }
 
 .activity-update-form .focus-in #whats-new-content .medium-editor-toolbar {
