#711 - Make Toolbar inaccessible when it's faded out.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -626,10 +626,12 @@ input#send-to-input {
 
 	&.active .medium-editor-toolbar-actions {
 		opacity: 0.4;
+		pointer-events: none;
 	}
 
 	&.active.medium-editor-toolbar-active .medium-editor-toolbar-actions {
 		opacity: 1;
+		pointer-events: auto;
 	}
 
 }
