--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -493,10 +493,12 @@ span.icons:before {
 
 		.medium-editor-toolbar-actions {
 			opacity: 0.4;
+			pointer-events: none;
 		}
 
 		&.medium-editor-toolbar-active .medium-editor-toolbar-actions {
 			opacity: 1;
+			pointer-events: auto;
 		}
 
 	}
