#266 document various fixies

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -481,6 +481,10 @@
 .active #activity-document-button,
 .active#messages-document-button,
 .active#messages-media-button,
+.active#forums-media-button,
+.active#forums-document-button,
+.active#bp-group-messages-media-button,
+.active#bp-group-messages-document-button,
 .active#messages-gif-button {
 
 	.bb-icon {
