--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1424,6 +1424,7 @@ img.emojioneemoji {
 body.documents #buddypress #item-body #media-uploader,
 body.documents #buddypress #item-body #media-uploader-child-folder,
 body.messages #buddypress #item-body #messages-post-document-uploader,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 #new-post #whats-new-attachments #forums-post-document-uploader,
 .bp-media-document-uploader.has-folderlocationUI,
 .ac-reply-content .ac-reply-attachments,
