--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1967,6 +1967,10 @@ input.search-query-input {
 .active #activity-document-button .bb-icon,
 .active#messages-document-button .bb-icon,
 .active#messages-media-button .bb-icon,
+.active#forums-media-button .bb-icon,
+.active#forums-document-button .bb-icon,
+.active#bp-group-messages-media-button .bb-icon,
+.active#bp-group-messages-document-button .bb-icon,
 .active#messages-gif-button .bb-icon {
   color: #122b46;
 }
@@ -12190,6 +12194,7 @@ img.emojioneemoji {
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-image,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-image,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-image,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-image,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-image,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-image,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-image,
@@ -12206,6 +12211,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-details,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-details,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-details,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-details,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-details,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-details,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-details,
@@ -12222,6 +12228,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-details,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-details,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-details,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-details,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-details,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-details,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-details,
@@ -12249,6 +12256,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-details .dz-size,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-details .dz-size,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-size,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-size,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-size,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-details .dz-size,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-details .dz-size,
@@ -12266,6 +12274,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-details .dz-filename,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-details .dz-filename,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-details .dz-filename,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-details .dz-filename,
@@ -12283,6 +12292,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 body.documents #buddypress #item-body #media-uploader .dz-preview.dz-file-preview .dz-details .dz-filename span,
 body.documents #buddypress #item-body #media-uploader-child-folder .dz-preview.dz-file-preview .dz-details .dz-filename span,
 body.messages #buddypress #item-body #messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename span,
+body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename span,
 #new-post #whats-new-attachments #forums-post-document-uploader .dz-preview.dz-file-preview .dz-details .dz-filename span,
 .bp-media-document-uploader.has-folderlocationUI .dz-preview.dz-file-preview .dz-details .dz-filename span,
 .ac-reply-content .ac-reply-attachments .dz-preview.dz-file-preview .dz-details .dz-filename span,
