--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
@@ -350,26 +350,20 @@ div.bbp-reply-header {
 }
 
 #bbpress-forums div.bbp-topic-content code,
-#bbpress-forums div.bbp-reply-content code,
-#bbpress-forums div.bbp-topic-content pre,
-#bbpress-forums div.bbp-reply-content pre {
+#bbpress-forums div.bbp-reply-content code {
 	display: inline-block;
 	background-color: #f9f9f9;
 	border: 1px solid #ddd;
 	padding: 0 5px;
-	max-width: 95%;
+	max-width: 100%;
 	vertical-align: middle;
 	margin-top: -3px;
 }
 
-#bbpress-forums div.bbp-topic-content pre,
-#bbpress-forums div.bbp-reply-content pre {
-	display: block;
-	line-height: 18px;
-	margin: 0 0 $marg-xlrg;
-	padding: 5px 10px;
-	white-space: pre;
-	overflow: auto;
+
+#bbpress-forums .bbp-the-content pre {
+	position: relative;
+	z-index: 1;
 }
 
 #bbpress-forums div.bbp-topic-content pre code,
