#266 - Added loader on document move folder

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2602,6 +2602,16 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			border-radius: 4px;
 			padding: 0 10px;
 
+			&.is-loading {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+
+				.bb-icon-loader {
+					font-size: 20px;
+				}
+			}
+
 			&.has-error {
 				border-color: #f00;
 			}
